  * [DEV] Correction du bug #latest #2
  * [DEV] Bug sur l'évaluation de la version du kernel dans docker-
    install
  * [DEV] Un exit mal placé...
  * [DEV] Mise-au-point docker-install #1
  * [DEV] Mise-au-point docker-install #2
  * [DEV] Mise-au-point docker-install #3
  * [DEV] Mise-au-point docker-install #4
  * [DEV] Mise-au-point docker-install #5
  * [DEV] Ajout du lien dans la doc vers la release 'latest'
  * [DEV] Typo dans la doc sur le lien vers la latest
  * [DEV] Correction du bug qui apparaît si le fichier .curlrc n'existe
    pas au moment d'un 'inist off'
  * [DEV] Correction du bug de droit sur le chmod dans _it_std_setEnv()
  * [DEV] Correction du bug sur la commande npm pas assignée
  * [DEV] Suppression du warning concernant le shell à l'ouverture d'une
    console
  * [DEV] Parallélisation des 'inist' on et 'inist off'
  * [DEV] Correction du bug de test de la version de noyau dans docker-
    install
  * [DEV] Correction du bug de test de la version de noyau dans docker-
    install #2
  * [DEV] Amélioration du rendu de la main sur inist on|off et
    suppression du message de parallel
  * [DEV] Gros refactoring docker-proxy
  * [DEV] Gros refactoring docker-proxy : correction d'un esac manquant
  * [DEV] Correction du bug d'affichage lsb_release sous Debian
  * [DEV] Ajout de la lib qui gère les fonction 'mail'
  * [DEV] Ajout du fichier de conf pour lighttpd (qui délivre proxy.pac
    aux navigateurs)
  * [DEV] Correction d'un bug d'affichage dans la fonction
    _it_std_message + ajout des commandes permettant de lancer chromium
    avec/sans prise en charge du proxy
  * [DEV] Commit -- 07/12/2016 @ 16:04:03
  * [DEV] Commit -- 08/12/2016 @ 17:44:28
  * [DEV] Suppression de tout ce qui est en relation avec les
    navigateurs web
  * [DEV] Corrections postfix
  * [DEV] Commit -- 12/12/2016 @ 08:43:50
  * [DEV] Commit -- 12/12/2016 @ 11:40:24

 -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200