@@ -10,3 +10,5 @@ ALL	ALL=(root)	NOPASSWD:	/opt/inist-tools/tools/docker-proxy-off.sh
 ALL	ALL=(root)	NOPASSWD:	/opt/inist-tools/tools/docker-registry-off.sh
 ALL	ALL=(root)	NOPASSWD:	/opt/inist-tools/tools/env-create.sh
 ALL	ALL=(root)	NOPASSWD:	/opt/inist-tools/tools/docker-install.sh
+ALL	ALL=(root)	NOPASSWD:	/opt/inist-tools/tools/postfix-relay-on.sh
+ALL	ALL=(root)	NOPASSWD:	/opt/inist-tools/tools/postfix-relay-off.sh
