@@ -167,5 +167,6 @@ inist-tools (0.9.11RC) RC; urgency=medium
   * [DEV] Corrections postfix
   * [DEV] Commit -- 12/12/2016 @ 08:43:50
   * [DEV] Commit -- 12/12/2016 @ 11:40:24
+  * [DEV] Refactoring commandes postfix
 
  -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200
